@@ -63,6 +63,42 @@ static GdkGC * gimp_display_shell_get_pen_gc  (GimpDisplayShell *shell,
 
 /*  public functions  */
 
+/**
+ * gimp_display_shell_get_scaled_image_size:
+ * @shell:
+ * @w:
+ * @h:
+ *
+ * Gets the size of the rendered image after it has been scaled.
+ *
+ **/
+void
+gimp_display_shell_draw_get_scaled_image_size (const GimpDisplayShell *shell,
+                                               gint                   *w,
+                                               gint                   *h)
+{
+  GimpProjection *proj;
+  TileManager    *tiles;
+  gint            level;
+  gint            level_width;
+  gint            level_height;
+
+  g_return_if_fail (GIMP_IS_DISPLAY_SHELL (shell));
+  g_return_if_fail (GIMP_IS_IMAGE (shell->display->image));
+
+  proj = gimp_image_get_projection (shell->display->image);
+
+  level = gimp_projection_get_level (proj, shell->scale_x, shell->scale_y);
+
+  tiles = gimp_projection_get_tiles_at_level (proj, level, NULL);
+
+  level_width  = tile_manager_width (tiles);
+  level_height = tile_manager_height (tiles);
+
+  if (w) *w = PROJ_ROUND (level_width  * (shell->scale_x * (1 << level)));
+  if (h) *h = PROJ_ROUND (level_height * (shell->scale_y * (1 << level)));
+}
+
 void
 gimp_display_shell_draw_guide (const GimpDisplayShell *shell,
                                GimpGuide              *guide,
@@ -511,7 +547,7 @@ gimp_display_shell_draw_area (const GimpDisplayShell *shell,
     return;
 
   gimp_display_shell_scroll_get_scaled_viewport_offset (shell, &sx, &sy);
-  gimp_display_shell_get_scaled_image_size (shell, &sw, &sh);
+  gimp_display_shell_draw_get_scaled_image_size (shell, &sw, &sh);
 
   /*  check if the passed in area intersects with
    *  both the display and the image
