@@ -36,6 +36,7 @@
 #include "gimpdisplay.h"
 #include "gimpdisplay-foreach.h"
 #include "gimpdisplayshell.h"
+#include "gimpdisplayshell-draw.h"
 #include "gimpdisplayshell-private.h"
 #include "gimpdisplayshell-scale.h"
 #include "gimpdisplayshell-scroll.h"
@@ -229,7 +230,7 @@ gimp_display_shell_scroll_center_image (GimpDisplayShell *shell,
   target_offset_x = shell->offset_x;
   target_offset_y = shell->offset_y;
 
-  gimp_display_shell_get_scaled_image_size (shell, &sw, &sh);
+  gimp_display_shell_draw_get_scaled_image_size (shell, &sw, &sh);
 
   if (horizontally)
     {
@@ -360,42 +361,6 @@ gimp_display_shell_scroll_get_scaled_viewport_offset (const GimpDisplayShell *sh
 }
 
 /**
- * gimp_display_shell_get_scaled_image_size:
- * @shell:
- * @w:
- * @h:
- *
- * Gets the size of the rendered image after it has been scaled.
- *
- **/
-void
-gimp_display_shell_get_scaled_image_size (const GimpDisplayShell *shell,
-                                          gint                   *w,
-                                          gint                   *h)
-{
-  GimpProjection *proj;
-  TileManager    *tiles;
-  gint            level;
-  gint            level_width;
-  gint            level_height;
-
-  g_return_if_fail (GIMP_IS_DISPLAY_SHELL (shell));
-  g_return_if_fail (GIMP_IS_IMAGE (shell->display->image));
-
-  proj = gimp_image_get_projection (shell->display->image);
-
-  level = gimp_projection_get_level (proj, shell->scale_x, shell->scale_y);
-
-  tiles = gimp_projection_get_tiles_at_level (proj, level, NULL);
-
-  level_width  = tile_manager_width (tiles);
-  level_height = tile_manager_height (tiles);
-
-  if (w) *w = PROJ_ROUND (level_width  * (shell->scale_x * (1 << level)));
-  if (h) *h = PROJ_ROUND (level_height * (shell->scale_y * (1 << level)));
-}
-
-/**
  * gimp_display_shell_scroll_get_disp_offset:
  * @shell:
  * @disp_xoffset:
@@ -478,7 +443,7 @@ gimp_display_shell_scroll_setup_hscrollbar (GimpDisplayShell *shell,
       ! shell->display->image)
     return;
 
-  gimp_display_shell_get_scaled_image_size (shell, &sw, NULL);
+  gimp_display_shell_draw_get_scaled_image_size (shell, &sw, NULL);
 
   if (shell->disp_width < sw)
     {
@@ -520,7 +485,7 @@ gimp_display_shell_scroll_setup_vscrollbar (GimpDisplayShell *shell,
       ! shell->display->image)
     return;
 
-  gimp_display_shell_get_scaled_image_size (shell, NULL, &sh);
+  gimp_display_shell_draw_get_scaled_image_size (shell, NULL, &sh);
 
   if (shell->disp_height < sh)
     {
